--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Apple DarkMode Example</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link type="text/css" href="style.css" rel="stylesheet">
 </head>
 <body>
+
+    <h1>This is the first test</h1>
 
 </body>
 </html>
