--- a/index.html
+++ b/index.html
@@ -8,7 +8,45 @@
 </head>
 <body>
 
-    <h1>This is the first test</h1>
+    <h1>Heading</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <div id="container">
+        <div>
+            <h2>Form</h2>
+
+            <p>
+                <input type="email" placeholder="Enter Email">
+            </p>
+
+            <p>
+                <input type="checkbox" id="checkbox">
+                <label for="checkbox">Checkbox</label>
+            </p>
+
+            <p>
+                <input type="radio" name="radio" id="first">
+                <label for="first">Radio Option 1</label>
+                <br>
+                <input type="radio" name="radio" id="second">
+                <label for="second">Radio Option 2</label>
+            </p>
+
+            <p>
+                <select>
+                    <option>Option 1</option>
+                    <option>Option 2</option>
+                    <option>Option 3</option>
+                </select>
+            </p>
+        </div>
+        <div>
+            <picture>
+                <source srcset="mojave-night.jpg" media="(prefers-color-scheme: dark)">
+                <img src="mojave-day.jpg" width="490px">
+            </picture>
+        </div>
+    </div>
 
 </body>
 </html>
